# residuated-binars

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  DistributiveCase.thy  Dockerfile  README.md  README.rst  local-build.sh  mypy.ini  pyproject.toml  show_report.sh  spelling.dict
.circleci/: config.yml
aitp2021paper/: aitp2021_2021.08.13.bib  aitp2021_2021.08.13.tex
aitp2021talk/: aitp2021talk.tex
doc/: requirements.txt
doc/source/: aitp2021.rst  api-doc.rst  conf.py  index.rst
examples/: abelian-group.ipynb  boolean-ring.ipynb  example.ipynb  lattice-example.ipynb  lattice-indep.ipynb  pseudo-weak-R0-algebras.ipynb  reproducing-papers.ipynb  reproducing-residuated-binars-papers.ipynb
involution/task10/: T114.thy  T118.thy  T122.thy  T123.thy  T144.thy  T151.thy  T152.thy  T154.thy  T16.thy  T177.thy  T181.thy  T184.thy  T185.thy  T25.thy  T27.thy  T30.thy  T50.thy  T57.thy  T59.thy  T61.thy  T81.thy  T88.thy  T90.thy  T92.thy  isabelle.out
involution/task4/: T0.thy  T1.thy  T10.thy  T100.thy  T101.thy  T102.thy  T103.thy  T104.thy  T105.thy  T106.thy  T107.thy  T108.thy  T109.thy  T11.thy  T110.thy  T111.thy  T112.thy  T113.thy  T114.thy  T115.thy  T116.thy  T117.thy  T118.thy  T119.thy  T12.thy  T120.thy  T121.thy  T122.thy  T123.thy  T124.thy  T125.thy  T126.thy  T127.thy  T128.thy  T129.thy  T13.thy  T130.thy  T131.thy  T132.thy  T133.thy  (+147 more)
involution/task7/: T105.thy  T111.thy  T114.thy  T117.thy  T118.thy  T121.thy  T122.thy  T123.thy  T131.thy  T140.thy  T142.thy  T144.thy  T149.thy  T151.thy  T152.thy  T154.thy  T16.thy  T164.thy  T170.thy  T176.thy  T177.thy  T18.thy  T180.thy  T181.thy  T184.thy  T185.thy  T20.thy  T25.thy  T27.thy  T28.thy  T30.thy  T39.thy  T48.thy  T50.thy  T51.thy  T57.thy  T58.thy  T59.thy  T61.thy  T7.thy  (+9 more)
involution/task8/: T111.thy  T114.thy  T117.thy  T118.thy  T121.thy  T122.thy  T123.thy  T140.thy  T142.thy  T144.thy  T149.thy  T151.thy  T152.thy  T154.thy  T16.thy  T170.thy  T176.thy  T177.thy  T18.thy  T180.thy  T181.thy  T184.thy  T185.thy  T20.thy  T25.thy  T27.thy  T28.thy  T30.thy  T48.thy  T50.thy  T51.thy  T57.thy  T58.thy  T59.thy  T61.thy  T81.thy  T84.thy  T86.thy  T88.thy  T90.thy  (+3 more)
notebooks/: another-check.ipynb  binars.pkl  rb_check.ipynb
residuated_binars/: __init__.py  abelian_group.py  add_task.py  algebraic_structure.py  axiom_checkers.py  boolean_ring.py  bounded_lattice.py  check_assumptions.py  constants.py  filter_theories.py  generate_theories.py  lattice.py  parser.py  pseudo_r0_algebra.py  pseudo_weak_r0_algebra.py  residuated_binar.py  residuated_binar_to_tex.py  use_nitpick.py  utils.py
residuated_binars/resources/: isabelle.out
tests/: test_use_nitpick.py
