[tool.poetry]
name = "residuated-binars"
version = "0.0.8"
description = ""
authors = ["Boris Shminke <boris@shminke.ml>", "Carlos Simpson"]
license = "GPLv3+"

[tool.poetry.dependencies]
python = "^3.9"
isabelle-client = "*"
dot2tex = "*"
graphviz = "*"

[tool.poetry.dev-dependencies]
jupyterlab = "*"
rope = "*"
flake8 = "*"
black = "*"
pylint = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
jedi = "*"
pre-commit = "*"
rise = "*"
importlib_resources = {version = "*", markers = "python_version < \"3.9\" and python_version >= \"3.7\""}

[tool.black]
line-length=79

[build-system]
requires = ["poetry-core>=1.1.11"]
build-backend = "poetry.core.masonry.api"
