[tool.poetry]
name = "residuated-binars"
version = "0.0.1"
description = "Package for generating and validating examples of different algebraic structures using Isabelle proof assistant"
authors = ["Boris Shminke <boris@shminke.ml>", "Carlos Simpson"]
license = "Apache-2.0"
repository = "https://github.com/inpefess/residuated-binars"
readme = "README.rst"
classifiers=[
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: OS Independent",
	"Intended Audience :: Science/Research",
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
	"Natural Language :: English",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
	"Typing :: Typed"
]
include = ["residuated_binars/py.typed"]

[tool.poetry.dependencies]
python = ">= 3.7.1, < 3.11"
isabelle-client = "*"
graphviz = "*"
pydocstyle = "*"

[tool.poetry.dev-dependencies]
jupyterlab = "*"
flake8 = "*"
black = "*"
pylint = "*"
mypy = "*"
pytest-cov = "*"
pre-commit = "*"
importlib_resources = {version = "*", markers = "python_version < \"3.9\""}
sphinx-autodoc-typehints = "*"
sphinx-rtd-theme = "*"
pyenchant = "*"

[tool.black]
line-length=79

[tool.isort]
profile = "black"
src_paths = ["residuated_binars"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --cov residuated_binars --cov-report xml --cov-fail-under=98 --junit-xml test-results/residuated-binars.xml"
testpaths = ["residuated_binars"]
doctest_optionflags = "NORMALIZE_WHITESPACE"

[tool.pylint.MASTER]
load-plugins = [
    "pylint.extensions.consider_ternary_expression",
    "pylint.extensions.docparams",
    "pylint.extensions.mccabe",
    "pylint.extensions.set_membership",
]

[tool.pylint.spelling]
spelling-dict = "en"
spelling-private-dict-file = "spelling.dict"

[tool.pylint.parameter_documentation]
accept-no-param-doc = false
accept-no-raise-doc = false
accept-no-return-doc = true
accept-no-yields-doc = false
default-docstring-type = "sphinx"

[tool.pylint.format]
max-line-length = 79

[tool.pylint.design]
max-statements = 10

[tool.mypy]
show_error_codes = true
incremental = false
disable_error_code = "no-redef"

[[tool.mypy.overrides]]
module = ["graphviz", "nest_asyncio", "importlib_resources"]
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py37,py38,py39,py310

[testenv]
deps =
    pytest-cov
    flake8
    pylint
    mypy
    toml
    pyenchant
commands =
    flake8 residuated_binars tests
    pylint residuated_binars tests
    mypy residuated_binars tests
    pytest
"""
